// Vitest Snapshot v1

exports[`plugins/cache > should add cache config correctly 1`] = `
{
  "cache": {
    "buildDependencies": {
      "packageJson": [
        "<ROOT>/tests/plugins/package.json",
      ],
    },
    "cacheDirectory": "<ROOT>/tests/plugins/node_modules/.cache/webpack",
    "name": "web-development",
    "type": "filesystem",
  },
}
`;

exports[`plugins/cache > should custom cache directory by user 1`] = `
{
  "cache": {
    "buildDependencies": {
      "packageJson": [
        "<ROOT>/tests/plugins/package.json",
      ],
    },
    "cacheDirectory": "<ROOT>/tests/plugins/node_modules/.cache/tmp",
    "name": "web-development",
    "type": "filesystem",
  },
}
`;

exports[`plugins/cache > should disable cache 1`] = `
{
  "cache": false,
}
`;

exports[`plugins/cache > should watch framework config change 1`] = `
{
  "cache": {
    "buildDependencies": {
      "config": [
        "/path/to/config.js",
      ],
      "packageJson": [
        "<ROOT>/tests/plugins/package.json",
      ],
    },
    "cacheDirectory": "<ROOT>/tests/plugins/node_modules/.cache/webpack",
    "name": "web-development",
    "type": "filesystem",
  },
}
`;

exports[`plugins/cache > should watch tsconfig change 1`] = `
{
  "cache": {
    "buildDependencies": {
      "packageJson": [
        "<ROOT>/tests/plugins/package.json",
      ],
      "tsconfig": [
        "/path/to/tsconfig.json",
      ],
    },
    "cacheDirectory": "<ROOT>/tests/plugins/node_modules/.cache/webpack",
    "name": "web-development",
    "type": "filesystem",
  },
}
`;
